# python-sdk

./: .gitignore  ARCHITECTURE_SPECADAPTER_TRANSPORT_NOTES.md  CONTRIBUTING.md  README.md  TODO.md  fix_phase_c.py  fix_quickstart.py  pyproject.toml  pyrightconfig.json  requirements-dev.txt
.claude/: settings.json
.cursor/rules/: copy-then-refactor.mdc  design-principles.mdc  parameter-first-constructor.mdc
docker/quickstart/: Dockerfile  docker-compose.yml
mcs-driver-rest-http/: pyproject.toml
mcs-driver-rest-http/src/mcs/drivers/rest_http/: __init__.py  rest_http_driver.py
mcs-drivers-core/: README.md  pyproject.toml
mcs-drivers-core/src/mcs/drivers/core/: __init__.py  mcs_base_orchestrator.py  mcs_driver_interface.py  mcs_tool_driver_interface.py
mcs-drivers-core/src/mcs/drivers/core/mixins/: __init__.py  healthcheck.py
mcs-examples/: README.md  mcs_driver_minimal_client.py  mcs_driver_minimal_client_non_stream.py  mcs_driver_minimal_client_stream.py  mcs_driver_minimal_client_stream_tcs.py  mcs_minimal_client.py  mcs_tooldriver_minimal_client.py  pyproject.toml
mcs-examples/csv_analysis/: README.md  chat.py  chat_non_stream.py  chat_stream.py  chat_stream_tcs.py  explore_responses.py
mcs-examples/csv_analysis/data2/: inventory.csv
mcs-examples/decorator_stack/: capability_passthrough.py  main.py  via_tooldriver.py
mcs-examples/gmail_agent/: .env.example  README.md  main.py
mcs-examples/openwebui/: mcs_filesystem_tool.py  mcs_gmail_tool.py  mcs_gmail_tool_auth0.py  mcs_multi_tool.py  mcs_rest_tool.py
mcs-examples/quickstart/: fastapi_rest_quickstart.py  fastapi_server_mcs_quickstart.py
mcs-examples/reference/: csv_driver.py  csv_driver_tcs.py  csv_localfs_driver.py  csv_localfs_driver_tcs.py  csv_localfs_tooldriver.py  csv_tooldriver.py  demo.py  demo_hybrid_driver.py  demo_orchestrator_client.py  demo_tooldriver.py  fs_adapter.py  localfs_fs_adapter.py  runtime_local_tooldriver.py
mcs-examples/reference/data/: sales.csv
mcs-examples/rest_single_api/: README.md  chat.py  chat_non_stream.py  chat_stream.py  chat_stream_tcs.py
mcs-examples/rest_single_api/specs/: context7.json
mcs-examples/skills/mcs-gmail/: .env.example  .gitignore  SKILL.md  config.toml.example
mcs-examples/skills/mcs-gmail/scripts/: mcs_tool.py
mcs-tool-rest-http/: pyproject.toml
mcs-tool-rest-http/src/mcs/tooldrivers/rest_http_tooldriver/: __init__.py  rest_http_tooldriver.py
scripts/: _test_gen.py  build_all.py  mcs_fs.py  skill_generator.py
src/mcs/driver/core/: __init__.py  mcs_base_orchestrator.py  mcs_driver_interface.py  mcs_tool_driver_interface.py
src/mcs/driver/core/mixins/: __init__.py
