[build-system]
requires = ["setuptools>=63", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name            = "mcs-driver-core"
version         = "0.2"
description     = "Core driver contract for the Model Context Standard."
readme          = "README.md"
requires-python = ">=3.9"
license         = "Apache-2.0"
license-files = ["LICEN[CS]E.*"]
keywords = ["mcs", "modelcontextstandard", "mcs-driver", "mcs-drivers", "mcs-tools", "mcs-orchestrator", "python-sdk", "python", "function-calling", "llms", "integration", "driver"]
authors         = [{ name = "Danny Gerst", email = "danny@dannygerst.de" }]

urls = {"Homepage" = "https://www.modelcontextstandard.io", "Source" = "https://github.com/modelcontextstandard/python-sdk"}

dependencies    = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
  "pre-commit>=3.8",
  "build>=1.2",
  "twine>=5.1",
  "basedpyright>=1.18",
]
examples = [
  "litellm>=1.40",
  "rich>=13.0",
  "python-dotenv>=1.0",
]



[tool.setuptools.packages.find]
where = ["src"]
