[project]
name = "mcs-python-sdk"
version = "0.2.0"
description = "Model Context Standard – Python SDK workspace root."
requires-python = ">=3.9"
dependencies = [
  "mcs-driver-core>=0.2",
  "mcs-adapter-http>=0.2",
  "mcs-adapter-localfs>=0.1",
  "mcs-adapter-smb>=0.1",
  "mcs-adapter-imap>=0.1",
  "mcs-adapter-smtp>=0.1",
  "mcs-driver-rest>=0.2",
  "mcs-driver-filesystem>=0.2",
  "mcs-driver-csv>=0.1",
  "mcs-driver-mailread>=0.1",
  "mcs-driver-mailsend>=0.1",
  "mcs-driver-mail>=0.1",
  "mcs-orchestrator-base>=0.1",
  "mcs-orchestrator-rest>=0.2",
  "mcs-inspector>=0.1",
]

[tool.uv.sources]
mcs-driver-core = { workspace = true }
mcs-adapter-http = { workspace = true }
mcs-adapter-localfs = { workspace = true }
mcs-adapter-smb = { workspace = true }
mcs-adapter-imap = { workspace = true }
mcs-adapter-smtp = { workspace = true }
mcs-driver-rest = { workspace = true }
mcs-driver-filesystem = { workspace = true }
mcs-driver-csv = { workspace = true }
mcs-driver-mailread = { workspace = true }
mcs-driver-mailsend = { workspace = true }
mcs-driver-mail = { workspace = true }
mcs-orchestrator-base = { workspace = true }
mcs-orchestrator-rest = { workspace = true }
mcs-inspector = { workspace = true }
mcs-examples = { workspace = true }

[tool.uv.workspace]
members = [
  "packages/core",
  "packages/inspector",
  "packages/drivers/*",
  "packages/adapters/*",
  "packages/orchestrators/*",
  "mcs-examples",
]

[dependency-groups]
dev = [
    "fastapi>=0.128.8",
    "pydantic>=2.12.5",
    "pytest>=8.4.2",
    "uvicorn>=0.39.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
  "pre-commit>=3.8",
  "build>=1.2",
  "twine>=5.1",
  "basedpyright>=1.18",
]
examples = [
  "litellm>=1.40",
  "rich>=13.0",
  "python-dotenv>=1.0",
]
