[build-system]
requires = ["setuptools>=63", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name            = "mcs-examples"
version         = "0.1.1"
description     = "Minimal MCS client and driver examples."
requires-python = ">=3.9"
dependencies    = [
  "mcs-driver-core>=0.2",
  "requests>=2.32",
  "litellm>=1.73",
  "rich>=13.0",
  "python-dotenv>=1.1.0",
]

[project.optional-dependencies]
quickstart = [
  "fastapi>=0.110",
  "uvicorn>=0.29",
  "pydantic>=2.7",
]
gmail = [
  "mcs-driver-mail>=0.1",
  "mcs-adapter-http>=0.2",
  "mcs-auth>=0.1",
  "mcs-auth-auth0>=0.1",
  "mcs-auth-oauth>=0.1",
  "mcs-auth-linkauth>=0.1",
]

[tool.uv.sources]
mcs-driver-core    = { workspace = true }
mcs-driver-mail    = { workspace = true }
mcs-adapter-http   = { workspace = true }
mcs-auth           = { workspace = true }
mcs-auth-auth0     = { workspace = true }
mcs-auth-oauth     = { workspace = true }
mcs-auth-linkauth  = { workspace = true }

[tool.setuptools.packages.find]
where   = ["."]
include = ["*"]
